2011-02-17  Mihai Parparita  <mihaip@chromium.org>

        Unreviewed Chromium expectations update. Remove duplicate expectation
        for media/video-display-toggle.html (on Snow Leopard only).

        * platform/chromium/test_expectations.txt:

2011-02-17  Nikolas Zimmermann  <nzimmermann@rim.com>

        Reviewed by Dirk Schulze.

        'ex' coordinates fail, when SVGFont doesn't provide an explicit xHeight attribute
        https://bugs.webkit.org/show_bug.cgi?id=54672

        Add new testcase from SVG 1.1 2nd Edition covering exs support + SVGFonts.

        * platform/mac/svg/W3C-SVG-1.1-SE/coords-units-03-b-expected.checksum: Added.
        * platform/mac/svg/W3C-SVG-1.1-SE/coords-units-03-b-expected.png: Added.
        * platform/mac/svg/W3C-SVG-1.1-SE/coords-units-03-b-expected.txt: Added.
        * svg/W3C-SVG-1.1-SE/coords-units-03-b.svg: Added.

2011-02-17  Andrew Wilson  <atwilson@chromium.org>

        Unreviewed test expectations update.

        [Chromium] set_version_blocked.html and set_version_queue.html started crashing on Chromium dbg bots after WK roll 78748:78777
        https://bugs.webkit.org/show_bug.cgi?id=54644

        Re-enabling tests now that they pass again.

        * platform/chromium/test_expectations.txt:

2011-02-17  Hans Wennborg  <hans@chromium.org>

        Reviewed by Jeremy Orlow.

        IndexedDB: enable test for auto increment key injection
        https://bugs.webkit.org/show_bug.cgi?id=54642

        Enable this test now that Chromium supports it.

        * storage/indexeddb/objectstore-autoincrement-expected.txt:
        * storage/indexeddb/objectstore-autoincrement.html:

2011-02-17  Sergio Villar Senin  <svillar@igalia.com>

        Unreviewed.

        Added a bunch of GTK+ baselines for Mozilla test suites
        (tables/mozilla/marvin).

        * platform/gtk/Skipped: Unskip tests which now have results.

2011-02-17  Zhenyao Mo  <zmo@google.com>

        Unreviewed, test expectations update.
